<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Support\Str;

class Settlement extends Model
{
    protected $fillable = [
        'uuid',
        'group_id',
        'from_user_id',
        'to_user_id',
        'amount_cents',
        'amount',
        'proof_photo',
        'settlement_date',
    ];

    protected $casts = [
        'settlement_date' => 'date',
        'amount_cents' => 'integer',
        'amount' => 'decimal:2',
    ];

    public function group(): BelongsTo
    {
        return $this->belongsTo(Group::class);
    }

    public function fromUser(): BelongsTo
    {
        return $this->belongsTo(User::class, 'from_user_id');
    }

    public function toUser(): BelongsTo
    {
        return $this->belongsTo(User::class, 'to_user_id');
    }

    public function getRouteKeyName(): string
    {
        return 'uuid';
    }

    protected static function boot()
    {
        parent::boot();

        static::creating(function ($model) {
            if (!$model->uuid) {
                $model->uuid = Str::uuid();
            }

            // Backward/forward compatibility across old and new create paths:
            // ensure both amount columns are populated when either value exists.
            if (($model->amount === null || $model->amount === '') && $model->amount_cents !== null) {
                $model->amount = round(((int) $model->amount_cents) / 100, 2);
            }

            if (($model->amount_cents === null || $model->amount_cents === '') && $model->amount !== null) {
                $model->amount_cents = (int) round(((float) $model->amount) * 100);
            }
        });
    }
}
